--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -13,7 +13,7 @@ Bdry_InputFileName = ./resources/diskBdryInput_M.txt
 AnimationFolder = ./animation/
 PolygonStatFileName = polygonStat_
 DetailStatFileNameBase = ./dataOutput/detailedStat_
-CellCenters_FileName = ./resources/coordinate_Cell13.txt
+CellCenters_FileName = ./resources/coordinate_Cell14.txt
 AnimationName = WingDisc_
 UniqueSymbol = B_
 
@@ -132,19 +132,19 @@ NucleusDivEffectRange =1.5625 #3.125   #1.0  #0.5625 #0.9 #1.8 #25   #25 #5.0 # 
 
 ### Membrane initialization Parameters
 # radius of the initial circle of membrane elements
-InitMembrRadius =1.25 #1.25 #0.4  #1.25 #2.0 #4.5  #2.0 # 0.4
+InitMembrRadius =1.0 #1.25 #1.25 #0.4  #1.25 #2.0 #4.5  #2.0 # 0.4
 # initial number of 
-InitMembrNodeCount =112 # 100
+InitMembrNodeCount =308 # 100
 
 ### Internal Element initialization Parameters
 InitCellRadius =0.9375 #0.3   #0.9375 #1.5 #3.0 # 0.3
 InitCellNodeCount =8 #20 # 20   # it should be half of MaxAllNode
 
 ### Memory Allocation Parameters
-MaxMembrNodeCountPerCell =114 #100 # 200 
+MaxMembrNodeCountPerCell =310 #100 # 200 
 MaxIntnlNodeCountPerCell =16 #20 #40 #40  # 40
-MaxAllNodeCountPerCell =130  #120 #240  #240
-MaxCellInDomain =20 # 700 // there is a place SceNodes where this is given explicitly
+MaxAllNodeCountPerCell =326  #120 #240  #240
+MaxCellInDomain =59 # 700 // there is a place SceNodes where this is given explicitly
 
 ##################################################
 
