--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -92,10 +92,10 @@ IntraCell_k1 =0.224 #0.125 #0.125 #0.3125   #0.1      #0.2344 #0.375  #0.5 # 0.1
 IntraCell_k2 =3.36     #0.4    #0.625 #1.0 # 0.4
 
 ### Subcellular element parameters for intnl-intnl when cell divides
-IntraCell_U0_Div =19.2 #0.78125 #21.75 #19 #14.6484 #1.5  #3.66 #9.375 # 1.5
-IntraCell_V0_Div =14.4  #6.71  #5.86    #0.6  #2.44 #6.25 #15 # 0.6
-IntraCell_k1_Div =0.272 #0.125 #0.58  #0.54 #0.46875 #0.15 #0.2344 #0.375 # 0.15
-IntraCell_k2_Div =4.08 #1.34  #1.25    #0.4  #0.625 #1.0 # 0.4
+IntraCell_U0_Div =7.04 #19.2 #0.78125 #21.75 #19 #14.6484 #1.5  #3.66 #9.375 # 1.5
+IntraCell_V0_Div =-7.04  #14.4  #6.71  #5.86    #0.6  #2.44 #6.25 #15 # 0.6
+IntraCell_k1_Div =0.375 #0.272 #0.125 #0.58  #0.54 #0.46875 #0.15 #0.2344 #0.375 # 0.15
+IntraCell_k2_Div =0.094 # 4.08 #1.34  #1.25    #0.4  #0.625 #1.0 # 0.4
 ### Nucleus parameters
 
 NucleusCell_U0 =0 #7.04 #0.78125 #0.78125  #2.0 #0.488    #0.05   #3.66 #9.375 #1.25 # 0.05
