--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -45,7 +45,7 @@ MembrLenDiv =0.2 #0.125 #0.2 # 0.04
 # stiffness of membrane element links.
 MembrStiff =200 #100 # 50
 MembrStiff_Mitotic =200 #100 # 50
-
+KContractMemb=5 ; 
 # bending coefficient of membrane links.
 MembrBenCoeff =9.0 #6.0 #0.4 #0.09 #0.0488 #0.005 #0.05 #1.125 #?0.125 #0.025  #0.005
 MembrBenCoeff_Mitotic =9.0 # 6.0 # added for mitotic phase
