--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -19,10 +19,10 @@ UniqueSymbol = B_
 
 ### Timing control parameters
 InitTimeStage=0                
-SimulationTotalTime =20000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
+SimulationTotalTime =2000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
 SimulationTimeStep =0.002 #0.01 #18e-3 #72e-3 #2e-3
 DampingCoef=36.0   #1
-TotalNumOfOutputFrames =100000
+TotalNumOfOutputFrames =1000
 
 ### Animation parameters
 IntraLinkDisplayRange =100 #0.78 #1.5625 # 2.5 #0.5
@@ -39,12 +39,12 @@ FExtIncline=0        #0.000474      #0.00474  #0.0 # 0.006264     #0.000174
 
 ### Membrane mechanical parameters
 # equilibrium length of link formed by memebrane elements
-MembrEquLen =0.0625 #0.1 # 0.020
+MembrEquLen =0.125 #0.0625 #0.1 # 0.020
 # length of membrane element link of newly divided daughter cells.
-MembrLenDiv =0.2 #0.125 #0.2 # 0.04
+MembrLenDiv =0.25 #0.2 #0.125 #0.2 # 0.04
 # stiffness of membrane element links.
-MembrStiff =200 #100 # 50
-MembrStiff_Mitotic =200 #100 # 50
+MembrStiff =400 #200 #100 # 50
+MembrStiff_Mitotic =400 #200 #100 # 50
 KContractMemb=5 
 # bending coefficient of membrane links.
 MembrBenCoeff =9.0 #6.0 #0.4 #0.09 #0.0488 #0.005 #0.05 #1.125 #?0.125 #0.025  #0.005
@@ -134,16 +134,16 @@ NucleusDivEffectRange =1.5625 #3.125   #1.0  #0.5625 #0.9 #1.8 #25   #25 #5.0 # 
 # radius of the initial circle of membrane elements
 InitMembrRadius =1.0 #1.25 #1.25 #0.4  #1.25 #2.0 #4.5  #2.0 # 0.4
 # initial number of 
-InitMembrNodeCount =446 # 100
+InitMembrNodeCount =198 #446 # 100
 
 ### Internal Element initialization Parameters
 InitCellRadius =0.9375 #0.3   #0.9375 #1.5 #3.0 # 0.3
 InitCellNodeCount =12 #20 # 20   # it should be half of MaxAllNode
 
 ### Memory Allocation Parameters
-MaxMembrNodeCountPerCell =450 #100 # 200 
+MaxMembrNodeCountPerCell =200 #450 #100 # 200 
 MaxIntnlNodeCountPerCell =24 #20 #40 #40  # 40
-MaxAllNodeCountPerCell =474 #120 #240  #240
+MaxAllNodeCountPerCell =224   #474 #120 #240  #240
 MaxCellInDomain =86 # 700 // there is a place SceNodes where this is given explicitly
 
 ##################################################
