optimize the search algorithm between cell and ECM

--- a/resources/disc_N02_2.cfg
+++ b/resources/disc_N02_2.cfg
@@ -1,3 +1,6 @@
 AnimationFolder = ./animation/machine2/
 UniqueSymbol = N02G02_
 KContractMemb=5 
+SimulationTotalTime =100 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
+SimulationTimeStep =0.002 #0.01 #18e-3 #72e-3 #2e-3
+TotalNumOfOutputFrames =10
