--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -13,16 +13,16 @@ Bdry_InputFileName = ./resources/diskBdryInput_M.txt
 AnimationFolder = ./animation/
 PolygonStatFileName = polygonStat_
 DetailStatFileNameBase = ./dataOutput/detailedStat_
-CellCenters_FileName = ./resources/coordinate_Cell18.txt
+CellCenters_FileName = ./resources/coordinate_Cell17.txt
 AnimationName = WingDisc_
 UniqueSymbol = B_
 
 ### Timing control parameters
 InitTimeStage=0                
-SimulationTotalTime =6000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
+SimulationTotalTime =20000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
 SimulationTimeStep =0.002 #0.01 #18e-3 #72e-3 #2e-3
 DampingCoef=36.0   #1
-TotalNumOfOutputFrames =600
+TotalNumOfOutputFrames =2000
 
 ### Animation parameters
 IntraLinkDisplayRange =100 #0.78 #1.5625 # 2.5 #0.5
@@ -39,12 +39,12 @@ FExtIncline=0        #0.000474      #0.00474  #0.0 # 0.006264     #0.000174
 
 ### Membrane mechanical parameters
 # equilibrium length of link formed by memebrane elements
-MembrEquLen =0.125 #0.0625 #0.1 # 0.020
+MembrEquLen =0.0625 #0.1 # 0.020
 # length of membrane element link of newly divided daughter cells.
-MembrLenDiv =0.25 #0.2 #0.125 #0.2 # 0.04
+MembrLenDiv =0.2 #0.125 #0.2 # 0.04
 # stiffness of membrane element links.
-MembrStiff =400 #200 #100 # 50
-MembrStiff_Mitotic =400 #200 #100 # 50
+MembrStiff =200 #200 #100 # 50
+MembrStiff_Mitotic =200 #200 #100 # 50
 KContractMemb=5 
 # bending coefficient of membrane links.
 MembrBenCoeff =9.0 #6.0 #0.4 #0.09 #0.0488 #0.005 #0.05 #1.125 #?0.125 #0.025  #0.005
@@ -52,11 +52,11 @@ MembrBenCoeff_Mitotic =9.0 # 6.0 # added for mitotic phase
 
 ### Membrane adhesion parameters
 # critical length that bonds could be formed
-BondAdhCriLen =10.0 #0.78125 #1.25 # 0.25
+BondAdhCriLen =0.78125 #1.25 # 0.25
 # stiffness of the bond 
 BondStiff =200.0 # 20.0   #   #1.25 #0.0
 BondStiff_Mitotic =200.0 # 8.0
-MaxAdhBondLen =10.0  #0.625 #0.2 #3.125 #5.0 #1.0 # 0.2// this is calculation
+MaxAdhBondLen =0.4 #10.0  #0.625 #0.2 #3.125 #5.0 #1.0 # 0.2// this is calculation
 MinAdhBondLen =0.0625 #0.02 #0.125 #0.2  #0.1 # 0.02
 
 ### Subcellular element parameters for membr-membr
@@ -134,16 +134,16 @@ NucleusDivEffectRange =1.5625 #3.125   #1.0  #0.5625 #0.9 #1.8 #25   #25 #5.0 # 
 # radius of the initial circle of membrane elements
 InitMembrRadius =1.0 #1.25 #1.25 #0.4  #1.25 #2.0 #4.5  #2.0 # 0.4
 # initial number of 
-InitMembrNodeCount =198 #446 # 100
+InitMembrNodeCount =446 # 100
 
 ### Internal Element initialization Parameters
 InitCellRadius =0.9375 #0.3   #0.9375 #1.5 #3.0 # 0.3
 InitCellNodeCount =12 #20 # 20   # it should be half of MaxAllNode
 
 ### Memory Allocation Parameters
-MaxMembrNodeCountPerCell =200 #450 #100 # 200 
+MaxMembrNodeCountPerCell =450 #450 #100 # 200 
 MaxIntnlNodeCountPerCell =24 #20 #40 #40  # 40
-MaxAllNodeCountPerCell =224   #474 #120 #240  #240
+MaxAllNodeCountPerCell =474   #474 #120 #240  #240
 MaxCellInDomain =86 # 700 // there is a place SceNodes where this is given explicitly
 
 ##################################################
