--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -19,10 +19,10 @@ UniqueSymbol = B_
 
 ### Timing control parameters
 InitTimeStage=0                
-SimulationTotalTime =24000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
+SimulationTotalTime =40000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
 SimulationTimeStep =0.002 #0.01 #18e-3 #72e-3 #2e-3
 DampingCoef=36.0   #1
-TotalNumOfOutputFrames =240
+TotalNumOfOutputFrames =4000
 
 ### Animation parameters
 IntraLinkDisplayRange =100 #0.78 #1.5625 # 2.5 #0.5
@@ -45,7 +45,7 @@ MembrLenDiv =0.2 #0.125 #0.2 # 0.04
 # stiffness of membrane element links.
 MembrStiff =200 #200 #100 # 50
 MembrStiff_Mitotic =200 #200 #100 # 50
-KContractMemb=5 
+KContractMemb=0 
 # bending coefficient of membrane links.
 MembrBenCoeff =9.0 #6.0 #0.4 #0.09 #0.0488 #0.005 #0.05 #1.125 #?0.125 #0.025  #0.005
 MembrBenCoeff_Mitotic =9.0 # 6.0 # added for mitotic phase
@@ -56,7 +56,7 @@ BondAdhCriLen =0.78125 #1.25 # 0.25
 # stiffness of the bond 
 BondStiff =200.0 # 20.0   #   #1.25 #0.0
 BondStiff_Mitotic =200.0 # 8.0
-MaxAdhBondLen =0.4 #10.0  #0.625 #0.2 #3.125 #5.0 #1.0 # 0.2// this is calculation
+MaxAdhBondLen =0.78125 #0.2 #3.125 #5.0 #1.0 # 0.2// this is calculation
 MinAdhBondLen =0.0625 #0.02 #0.125 #0.2  #0.1 # 0.02
 
 ### Subcellular element parameters for membr-membr
