--- a/resources/disc_N03_3.cfg
+++ b/resources/disc_N03_3.cfg
@@ -1,3 +1,5 @@
 AnimationFolder = ./animation/machine3/
 UniqueSymbol = N03G03_
-KContractMemb=0 
+KContractMemb=4 
+MembrStiff =800 
+MembrStiff_Mitotic =800
