changing input parameters

--- a/resources/disc_N02_0.cfg
+++ b/resources/disc_N02_0.cfg
@@ -1,3 +1,5 @@
 AnimationFolder = ./animation/machine2/
 UniqueSymbol = N02G00_
-KContractMemb=0  
+KContractMemb=6  
+MembrStiff =800 #200 #100 # 50
+MembrStiff_Mitotic =800 #200 #100 # 50
