--- a/resources/disc_N02_1.cfg
+++ b/resources/disc_N02_1.cfg
@@ -1,3 +1,5 @@
 AnimationFolder = ./animation/machine2/
 UniqueSymbol = N02G01_
-KContractMemb=0 
+KContractMemb=6 
+MembrStiff =600 #200 #100 # 50
+MembrStiff_Mitotic =600 #200 #100 # 50
