--- a/resources/disc_N02_3.cfg
+++ b/resources/disc_N02_3.cfg
@@ -1,3 +1,5 @@
 AnimationFolder = ./animation/machine2/
 UniqueSymbol = N02G03_
-KContractMemb=0 
+KContractMemb=6 
+MembrStiff =200 #200 #100 # 50
+MembrStiff_Mitotic =200 #200 #100 # 50
