Just changing input parameters

--- a/resources/disc_N01_1.cfg
+++ b/resources/disc_N01_1.cfg
@@ -1,3 +1,5 @@
 AnimationFolder = ./animation/machine1/
 UniqueSymbol = N01G01_
-
+KContractMemb=6  
+MembrStiff =600 #200 #100 # 50
+MembrStiff_Mitotic =600 #200 #100 # 50
