--- a/resources/disc_N01_0.cfg
+++ b/resources/disc_N01_0.cfg
@@ -1,3 +1,6 @@
 AnimationFolder = ./animation/machine1/
 UniqueSymbol = N01G00_
+KContractMemb=3  
+MembrStiff =600 #200 #100 # 50
+MembrStiff_Mitotic =600 #200 #100 # 50
 
