--- a/resources/disc_N03_0.cfg
+++ b/resources/disc_N03_0.cfg
@@ -1,3 +1,5 @@
 AnimationFolder = ./animation/machine3/
 UniqueSymbol = N03G00_
 KContractMemb=0 
+MembrStiff =600 #200 #100 # 50
+MembrStiff_Mitotic =600 #200 #100 # 50
