--- a/resources/disc_N01_3.cfg
+++ b/resources/disc_N01_3.cfg
@@ -3,4 +3,9 @@ UniqueSymbol = N01G03_
 KContractMemb=12  
 MembrStiff =600 #200 #100 # 50
 MembrStiff_Mitotic =600 #200 #100 # 50
+IntraCell_U0 =12.8 #0.78125 #0.78125  #2.0 #0.488    #0.05   #3.66 #9.375 #1.25 # 0.05
+IntraCell_V0 =9.6 #0    #0.146484 #0.015  #2.44 #6.25   #0.375 # 0.015
+IntraCell_k1 =0.224 #0.125 #0.125 #0.3125   #0.1      #0.2344 #0.375  #0.5 # 0.1
+IntraCell_k2 =3.36     #0.4    #0.625 #1.0 # 0.4
+
 
