change input parameters

--- a/resources/disc_N02_1.cfg
+++ b/resources/disc_N02_1.cfg
@@ -1,12 +1,11 @@
 AnimationFolder = ./animation/machine2/
 UniqueSymbol = N02G01_
-KContractMemb=6.387 
-MembrStiff =600 #200 #100 # 50
-MembrStiff_Mitotic =600 #200 #100 # 50
+KContractMemb=6.387  
+MembrStiff =20 #200 #100 # 50
+MembrStiff_Mitotic =20 #200 #100 # 50
 IntraCell_U0 =26.646 #0.78125 #0.78125  #2.0 #0.488    #0.05   #3.66 #9.375 #1.25 # 0.05
 IntraCell_V0 =19.984 #0    #0.146484 #0.015  #2.44 #6.25   #0.375 # 0.015
 IntraCell_k1 =0.323 #0.125 #0.125 #0.3125   #0.1      #0.2344 #0.375  #0.5 # 0.1
 IntraCell_k2 =4.848     #0.4    #0.625 #1.0 # 0.4
-
-
+SimulationTimeStep =0.0005 #0.01 #18e-3 #72e-3 #2e-3
 
