--- a/resources/disc_N03_1.cfg
+++ b/resources/disc_N03_1.cfg
@@ -1,11 +1,11 @@
 AnimationFolder = ./animation/machine3/
 UniqueSymbol = N03G01_
-KContractMemb=10.77 
-MembrStiff =600 #200 #100 # 50
-MembrStiff_Mitotic =600 #200 #100 # 50
-IntraCell_U0 =6.049 #0.78125 #0.78125  #2.0 #0.488    #0.05   #3.66 #9.375 #1.25 # 0.05
-IntraCell_V0 =4.537 #0    #0.146484 #0.015  #2.44 #6.25   #0.375 # 0.015
-IntraCell_k1 =0.154 #0.125 #0.125 #0.3125   #0.1      #0.2344 #0.375  #0.5 # 0.1
-IntraCell_k2 =2.310    #0.4    #0.625 #1.0 # 0.4
-
+KContractMemb=9.0 
+MembrStiff =450 #200 #100 # 50
+MembrStiff_Mitotic =450 #200 #100 # 50
+IntraCell_U0 =45.381 #0.78125 #0.78125  #2.0 #0.488    #0.05   #3.66 #9.375 #1.25 # 0.05
+IntraCell_V0 =34.035 #0    #0.146484 #0.015  #2.44 #6.25   #0.375 # 0.015
+IntraCell_k1 =0.422 #0.125 #0.125 #0.3125   #0.1      #0.2344 #0.375  #0.5 # 0.1
+IntraCell_k2 =6.327     #0.4    #0.625 #1.0 # 0.4
+TotalNumOfOutputFrames =5000
 
