continue working on giving option of resuming the simulation from last stopped point

--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -9,12 +9,15 @@ SimulationType = 3
 AnimationType = 5
 
 ### Input and output parameters
-ResumeSimulation=3
+ResumeSimulation=0
 Bdry_InputFileName = ./resources/diskBdryInput_M.txt
 AnimationFolder = ./animation/
 PolygonStatFileName = polygonStat_
 DetailStatFileNameBase = ./dataOutput/detailedStat_
 CellCenters_FileName = ./resources/coordinate_Cell20.txt
+MembraneNodes_FileName = ./resources/coordinate_Membrane7.txt
+MembraneNodes_FileName_Resume = ResumeDataFileMembrane.txt 
+IntnlNodes_FileName_Resume = ResumeDataFileInternal.txt 
 AnimationName = WingDisc_
 UniqueSymbol = B_
 
