--- a/resources/ECM_N02G01_input.cfg
+++ b/resources/ECM_N02G01_input.cfg
@@ -1,8 +1,11 @@
-stiffnessECMBasal,stiffnessECMBC,stiffnessECMPerip,lknotECMBasal,lknotECMBC,lknotECMPerip 
+stiffnessECMBasal,stiffnessECMBC,stiffnessECMPerip,lknotECMBasal,lknotECMBC,lknotECMPerip,dampECMBasal,dampECMBC,dampECMApical 
 4500
 4500
 4500
 0.0
 0.0
 0.0
+36.0
+36.0
+36.0
 
