--- a/resources/disc_M.cfg
+++ b/resources/disc_M.cfg
@@ -9,24 +9,24 @@ SimulationType = 3
 AnimationType = 5
 
 ### Input and output parameters
-ResumeSimulation=1
+ResumeSimulation=0
 Bdry_InputFileName = ./resources/diskBdryInput_M.txt
 AnimationFolder = ./animation/
 PolygonStatFileName = polygonStat_
 DetailStatFileNameBase = ./dataOutput/detailedStat_
 CellCenters_FileName = ./resources/coordinate_Cell20.txt
 MembraneNodes_FileName = ./resources/coordinate_Membrane7.txt
-MembraneNodes_FileName_Resume = ResumeDataFileMembrane.txt 
-IntnlNodes_FileName_Resume = ResumeDataFileInternal.txt 
+MembraneNodes_FileName_Resume = DataFileMembrane_ 
+IntnlNodes_FileName_Resume = DataFileInternal_
 AnimationName = WingDisc_
 UniqueSymbol = B_
 
 ### Timing control parameters
 InitTimeStage=0                
-SimulationTotalTime =150000 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
+SimulationTotalTime =0.06 # 3600 #10000#3600 #200  #2000e-3 #10000 #16000
 SimulationTimeStep =0.006 #0.01 #18e-3 #72e-3 #2e-3
 DampingCoef=36.0   #1
-TotalNumOfOutputFrames =500
+TotalNumOfOutputFrames =10
 
 ### Animation parameters
 IntraLinkDisplayRange =500 #0.78 #1.5625 # 2.5 #0.5
